adding anything else I may have forgotten

--- a/etls/loadAddresses/loadAddresses_WIP.ipynb
+++ b/etls/loadAddresses/loadAddresses_WIP.ipynb
@@ -2,30 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "33ffbb09",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from dbHelpers import createEngine\n",
+    "#from dbHelpers import createEngine\n",
     "import numpy as np\n",
     "import uuid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "167a5b2f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = createEngine()"
+    "#engine = createEngine()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "id": "c4ea686f",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "id": "97367c6c",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "id": "047de620",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "id": "11558a1d",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "a9bdf94c",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "id": "c4274f41",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "id": "0f362aca",
    "metadata": {},
    "outputs": [],
@@ -97,28 +97,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "id": "572b8a9b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "734"
-      ]
-     },
-     "execution_count": 114,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dedup_address.rename(columns={'postalcode':'zipcode', 'city':'city_name', 'state':'state_code'}).to_sql('address_us', con = engine, if_exists = 'append', index=False, schema='npd')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "id": "2217f5ab",
    "metadata": {},
    "outputs": [],
@@ -130,28 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "id": "8efdd652",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "734"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "address_ids.to_sql('address', con = engine, if_exists = 'append', index=False, schema='npd')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "id": "fb95c5b7",
    "metadata": {},
    "outputs": [],
@@ -161,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "id": "59982306",
    "metadata": {},
    "outputs": [],
@@ -171,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "id": "e9ffca7b",
    "metadata": {},
    "outputs": [],
@@ -182,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "id": "761f52e6",
    "metadata": {},
    "outputs": [],
@@ -194,28 +172,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "id": "edd4edd0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "190"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "individual_addresses.to_sql('individual_to_address', con = engine, if_exists = 'append', index=False, schema='npd')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "id": "7de572d0",
    "metadata": {},
    "outputs": [],
@@ -227,21 +194,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "id": "42738db9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "79"
-      ]
-     },
-     "execution_count": 128,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "organization_addresses.to_sql('organization_to_address', con = engine, if_exists = 'append', index=False, schema='npd')"
    ]
